// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolveLoader transforms correctly using "resolveLoader-0" data 1`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    resolveLoader: {
        modules: ['ok', mode_nodules],
        mainFields: [no, 'main'],
        moduleExtensions: ['-kn', ok]
    }
}
"
`;

exports[`resolveLoader transforms correctly using "resolveLoader-1" data 1`] = `
"module.exports = {
	entry: 'index.js',
	output: {
		filename: 'bundle.js'
	},
	resolveLoader: {
		moduleExtensions: ['-loader', '-kn', ok]
	}
}
"
`;
